<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nuevo-al"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#6F5F5F"
        android:text="@string/nuevo"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="-22dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/nombre-nv"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_below="@+id/nuevo-al"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/txtagregar_nuevo"
        app:layout_constraintTop_toBottomOf="@+id/nuevo-al"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="8dp"/>

    <EditText
        android:id="@+id/txtagregar_nuevo"
        android:layout_width="373dp"
        android:layout_height="35dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp"
        android:layout_below="@+id/nombre-nv"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/apellido-nv"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_below="@+id/txtagregar_nuevo"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/apellido"
        app:layout_constraintBottom_toTopOf="@+id/txtapellido_nuevo"
        app:layout_constraintTop_toBottomOf="@+id/txtagregar_nuevo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/txtapellido_nuevo"
        android:layout_width="373dp"
        android:layout_marginLeft="8dp"
        android:layout_height="35dp"
        android:layout_below="@+id/apellido-nv"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/carrera-nv"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_below="@+id/txtapellido_nuevo"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/carrera"
        app:layout_constraintBottom_toTopOf="@+id/txtcarrera_nuevo"
        app:layout_constraintTop_toBottomOf="@+id/txtapellido_nuevo"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/txtcarrera_nv"
        android:layout_width="373dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_below="@+id/carrera-nv"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="291dp" />

    <TextView
        android:id="@+id/carnet-nv"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/carnet"
        app:layout_constraintBottom_toTopOf="@+id/txtcarnet-nv"
        app:layout_constraintTop_toBottomOf="@+id/txtcarrera_nv"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp"
        android:layout_below="@+id/txtcarrera_nv"
        android:layout_marginLeft="8dp"
        />

    <EditText
        android:id="@+id/txtcarnet-nv"
        android:layout_width="373dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sexo-nv"
        tools:layout_editor_absoluteX="16dp"
        android:layout_below="@+id/carnet-nv"
        android:layout_marginLeft="8dp"
        />

    <TextView
        android:id="@+id/sexo-nv"
        android:layout_width="86dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sexo"
        android:layout_below="@+id/txtcarnet-nv"
        app:layout_constraintBottom_toTopOf="@+id/rbtnsexo"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="8dp"/>

    <RadioGroup
        android:id="@+id/rbtnsexo"
        android:layout_width="187dp"
        android:layout_height="59dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/sexo-nv"
        app:layout_constraintBottom_toTopOf="@+id/agregar-nv"
        tools:layout_editor_absoluteX="15dp"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:id="@+id/femenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sfem" />

        <RadioButton
            android:id="@+id/masculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/smas" />

    </RadioGroup>

    <Button
        android:id="@+id/agregar-nv"
        android:layout_width="320dp"
        android:layout_height="36dp"
        android:layout_below="@+id/rbtnsexo"
        android:layout_centerHorizontal="true"
        android:background="#6F5F5F"
        android:enabled="false"
        android:text="@string/btnAgregar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="571dp" />


</RelativeLayout>